force-app/main/default/objects/Contact/fields/Last_Processed_TS__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_TS__c</fullName>
    <label>Last Processed TS</label>
    <type>DateTime</type>
</CustomField>