force-app/main/default/objects/Contact/fields/Processed_Count__c.field-meta.xml
<CustomField>
    <fullName>Processed_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times that this Contact has been processed.  Part of the example application to demonstrate external processing on Heroku.</description>
    <label>Processed Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>