force-app/main/default/objects/Contact/fields/Recently_Processed__c.field-meta.xml
<CustomField>
    <fullName>Recently_Processed__c</fullName>
    <formula>IF( (Last_Processed_TS__c &gt; (NOW() - 1/(24*60)) ) , &#39;✅&#39;, &#39;❌&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recently Processed</label>
    <type>Text</type>
</CustomField>