force-app/main/default/objects/Contact/listViews/All_Recently_Processed.listView-meta.xml
<ListView>
    <fullName>All_Recently_Processed</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Last_Processed_TS__c</columns>
    <columns>Recently_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All (with Recently Processed)</label>
</ListView>